--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,8 @@ body {
   font-family: 'Shippori Mincho B1', serif;
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100vh;
 }
 
 section {
@@ -12,25 +14,24 @@ section {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  height: 75vh;
+  height: 100vh;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   width: 100%;
-}
-
-section:nth-child(odd) {
-  color: black;
-  background-color: white;
+  position: absolute;
 }
 
 section.hero {
+  color: black;
+  background-color: white;
   -webkit-box-pack: end;
       -ms-flex-pack: end;
           justify-content: flex-end;
   padding-top: 140px;
-  position: relative;
   overflow: visible;
+  height: 90vh;
+  z-index: 2;
 }
 
 section.hero p {
@@ -43,28 +44,29 @@ section.hero p {
   z-index: 1;
 }
 
-section.hero #circle {
-  background-color: white;
-  border-radius: 500px;
-  bottom: -125px;
-  left: 30px;
-  height: 500px;
-  position: absolute;
-  width: 500px;
-}
-
 section.subtitle {
   height: 100vh;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  z-index: 1;
 }
 
 section.subtitle h2 {
-  font-size: 200px;
+  font-size: 260px;
   text-align: center;
-  overflow: hidden;
-  line-height: 280px;
+  overflow: visible;
+  line-height: 340px;
+}
+
+section.subtitle #circle {
+  background-color: white;
+  border-radius: 500px;
+  top: 0;
+  left: 30px;
+  height: 500px;
+  position: absolute;
+  width: 500px;
 }
 /*# sourceMappingURL=styles.css.map */
