--- a/css/styles.scss
+++ b/css/styles.scss
@@ -6,6 +6,8 @@ body {
   font-family: 'Shippori Mincho B1', serif;
   margin: 0;
   padding: 0;
+  width: 100%;
+  height: 100vh;
 }
 
 section {
@@ -13,20 +15,20 @@ section {
   box-sizing: border-box;
   color: white;
   display: flex;
-  height: 75vh;
+  height: 100vh;
   justify-content: center;
   width: 100%;
-
-  &:nth-child(odd) {
-    color: black;
-    background-color: white;
-  }
+  position: absolute;
 
   &.hero {
+    color: black;
+    background-color: white;
     justify-content: flex-end;
     padding-top: 140px;
-    position: relative;
+    // position: relative;
     overflow: visible;
+    height: 90vh;
+    z-index: 2;
 
 
     p {
@@ -39,27 +41,29 @@ section {
       z-index: 1;
     }
 
+  }
+  
+  &.subtitle {
+    height: 100vh;
+    flex-direction: column;
+    z-index: 1;
+    
+    h2 {
+      font-size: 260px;
+      text-align: center;
+      overflow: visible;
+      line-height: 340px;
+    }
+    
     #circle {
       background-color: white;
       border-radius: $circle-size;
-      bottom: -#{$circle-size / 4};
+      top: 0;
       left: 30px;
       height: $circle-size;
       position: absolute;
       width: $circle-size;
-
-    }
-  }
-
-  &.subtitle {
-    height: 100vh;
-    flex-direction: column;
-
-    h2 {
-      font-size: 200px;
-      text-align: center;
-      overflow: hidden;
-      line-height: 280px;
+    
     }
   }
 }
