--- a/css/styles.scss
+++ b/css/styles.scss
@@ -31,13 +31,21 @@ section {
 
 
     p {
-      font-size: 35px;
+      font-size: 18px;
       text-align: right;
       display: block;
       width: 60vw;
       margin-right: 40px;
       position: relative;
       z-index: 1;
+
+      @media screen and (min-width: 600px) {
+        font-size: 25px;
+      }
+
+      @media screen and (min-width: 1024px) {
+        font-size: 35px;
+      }
     }
 
   }
@@ -58,7 +66,7 @@ section {
     #circle {
       background-color: white;
       border-radius: $circle-size;
-      top: 30%;
+      top: 20vh;
       height: $circle-size;
       position: absolute;
       width: $circle-size;
@@ -74,7 +82,6 @@ section {
       margin: 0 auto;
       position: absolute;
       left: 5vw;
-      top: 63%;
 
       .column {
         height: 90vh;
@@ -83,7 +90,7 @@ section {
     }
   }
 
-  .mario {
+  .goomba {
     width: 200px;
     left: calc(50vw - 100px);
     position: absolute;
